# http-negotiator

./: Cargo.toml
src/: accept.rs  axum.rs  content_type.rs  encoding.rs  error.rs  language.rs  lib.rs
src/accept/: mod.rs  negotiator.rs  negotiator_owned.rs  negotiator_ref.rs
src/v2/: accept.rs  mod.rs  negotiator.rs
src/v3/: accept.rs  mod.rs
