[package]
name = "http-negotiator"
version = "0.1.0-alpha.1"
edition = "2021"

[dependencies]
thiserror = "1.0.31"
axum-core = { version = "0.2.7", optional = true }
tower-service = { version = "0.3.2", optional = true }
tower-layer = { version = "0.3.1", optional = true }
http = { version = "0.2.8", optional = true }
async-trait = { version = "0.1.56", optional = true }

[features]
axum = ["tower-service", "tower-layer", "axum-core", "http", "async-trait"]