[package]
name = "http-negotiator"
version = "0.1.0-alpha.2"
edition = "2021"

[dependencies]
thiserror = "1.0.38"
async-trait = { version = "0.1.65", optional = true }
axum-core = { version = "0.3.3", optional = true }
http = { version = "0.2.9", optional = true }

[dev-dependencies]
axum = "0.6.11"
hyper = "0.14.24"
tokio = { version = "1.26.0", features = ["rt", "macros"] }
tower = { version = "0.4.13" }

[features]
axum = ["axum-core", "async-trait", "http"]